# experimentation

./: .flake8  .pre-commit-config.yaml  pyproject.toml
experimentation/: plotting.py
notebooks/: ancova.ipynb  bayesian_test.ipynb  delta_method.ipynb  winners_curse.ipynb
