[tool.poetry]
name = "experimentation"
version = "0.1.0"
description = ""
authors = ["Pablo Alcain <pabloalcain@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4"
scipy = "^1.14.1"
numpy = "^2.1.1"
matplotlib = "^3.9.2"
pandas = "^2.2.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
